--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "nodemon server.js",
         "seed": "node seeds/index.js"
-
     },
     "author": "",
     "license": "ISC",
@@ -15,14 +14,16 @@
         "bcrypt": "^5.0.0",
         "connect-session-sequelize": "^7.0.4",
         "dotenv": "^8.6.0",
-        "express": "^4.17.1",
+        "express": "^4.18.1",
         "express-handlebars": "^5.3.5",
         "express-session": "^1.17.1",
         "handlebars": "^4.7.6",
+        "mysql": "^2.18.1",
         "mysql2": "^2.2.5",
         "nodemon": "^2.0.19",
         "normalize-path": "^3.0.0",
-        "sequelize": "^6.3.5",
+        "require": "^2.4.20",
+        "sequelize": "^6.21.3",
         "user": "^0.0.0"
     }
 }
