--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "nodemon server.js",
-        "seed": "node seeds/server.js"
+        "seeds": "node seeds/index.js"
     },
     "author": "",
     "license": "ISC",
@@ -18,6 +18,7 @@
         "express-handlebars": "^5.3.5",
         "express-session": "^1.17.3",
         "handlebars": "^4.7.7",
+        "handlebars-helpers": "^0.10.0",
         "mysql": "^2.18.1",
         "mysql2": "^2.3.3",
         "nodemon": "^2.0.19",
