--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
         "require": "^2.4.20",
         "sequelize": "^6.21.3",
         "user": "^0.0.0"
+    },
+    "devDependencies": {
+        "case-sensitive-paths-webpack-plugin": "^2.4.0"
     }
 }
